# kube-agent

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  ci.yml
examples/: sample-alert.json
helm/kube-agent/: Chart.yaml  values.yaml
helm/kube-agent/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  rbac.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
kind/: README.md  setup-cluster.sh
kind/terraform/: alert-simulation.tf  kube-agent.tf  monitoring.tf  outputs.tf  providers.tf
kube_agent/: __init__.py  cli.py  config.py  main.py  metrics.py  models.py
tests/: __init__.py  test_main.py
